CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.13

	- Now set the TCP "no delay" option on network
	  connections to improve performance/response time.
	- Improved the IRIX printing tools support with patches
	  from Andrea Suatoni.
	- Added a new PrintcapGUI directive to specify the GUI
	  option panel program to use for the IRIX printing
	  tools support.
	- The cupsGetDests() function did not check to see if a
	  user-defined default printer (set via lpoptions) still
	  existed.
	- The pstops filter no longer assumes that the default
	  dictionary is writable when doing N-up processing.
	- The pstops filter now supports printing N-up with the
	  page-set option.
	- The imagetoraster filter now supports direct printing
	  of CMYK image data without conversion/correction.
	- The IPP backend now reports printer state/error
	  conditions when possible (toner low, media empty,
	  etc.)
	- The lpstat command now supports the (undocumented)
	  IRIX -l option ("-lprintername") for a compact job
	  listing for a printer.
	- The lpstat command now includes printer date/time
	  information in the output (always Jan 01 00:00) to
	  make third-party tools happy.
	- The text filter now supports non-integer cpi and lpi
	  values.
	- The Margins field in the CUPS raster header was not
	  initialized by the pstoraster filter.
	- Added --with-optim="flags" option to configure script.
	- Updated the Italian message translations.
	- Updated the cups.list file to install the correct
	  files.
	- The pstoraster filter accessed the third element of a
	  2 element array.
	- The scheduler did not setup a status pipe for polling
	  processes, so error messages went to whatever file
	  descriptor 2 was pointing to when they were started.
	- The httpMD5Final() function didn't put a colon between
	  the password and nonce strings.
	- The pstops filter did not default to Binary data for
	  "%%BeginData:".
	- The pstops filter did not stop processing when a line